<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_mission_donation"
        android:name="com.example.mova.ui.missiondonation.MissionDonationFragment"
        android:label="@string/label_mission_donation"
        tools:layout="@layout/fragment_mission_donation" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mova.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_movie_detail"
            app:destination="@id/navigation_movie_detail" />
        <action
            android:id="@+id/action_home_to_movie_write"
            app:destination="@id/navigation_movie_write" />
    </fragment>
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.mova.ui.mypage.MypageFragment"
        android:label="@string/label_mypage"
        tools:layout="@layout/fragment_mypage" />
    <fragment
        android:id="@+id/navigation_movie_detail"
        android:name="com.example.mova.ui.movie.MovieDetailFragment"
        android:label="영화 상세"
        tools:layout="@layout/fragment_movie_detail" />
    <fragment
        android:id="@+id/navigation_movie_write"
        android:name="com.example.mova.ui.movie.MovieWriteFragment"
        android:label="영화 기록"
        tools:layout="@layout/fragment_movie_write">
        <action
            android:id="@+id/action_movie_write_to_ai"
            app:destination="@id/navigation_ai" />
    </fragment>
    <fragment
        android:id="@+id/navigation_ai"
        android:name="com.example.mova.ui.movie.AiFragment"
        android:label="AI 미션"
        tools:layout="@layout/fragment_ai">
        <action
            android:id="@+id/action_ai_to_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_mission"
        android:name="com.example.mova.ui.missiondonation.MissionFragment"
        android:label="미션"
        tools:layout="@layout/fragment_mission">
        <action
            android:id="@+id/action_mission_to_movie_detail"
            app:destination="@id/navigation_movie_detail" />
    </fragment>

</navigation>