<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white100_16">

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/InterSemiBold.Gray500.S16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_movie_name_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_dialog_movie_name"
        style="@style/InterMedium.Gray500.S13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="15dp"
        android:autofillHints="text"
        android:backgroundTint="@color/gray_55"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_dialog_cancel"
        style="@style/InterSemiBold.Gray200.S12"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_gray25_40"
        android:text="@string/label_movie_name_dialog_cancel"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dialog_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_dialog_movie_name" />

    <Button
        android:id="@+id/btn_dialog_confirm"
        style="@style/InterSemiBold.White100.S12"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_primary_40"
        android:text="@string/label_movie_name_dialog_confirm"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/btn_dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_dialog_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_dialog_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>