<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_90"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_ai_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="34dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_movie_detail_btn_back"
            android:src="@drawable/ic_arrow_back_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ai_title"
            style="@style/InterMedium.Primary.S16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_mission_ai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ai_mission_title"
            style="@style/InterSemiBold.Primary.S26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="103dp"
            android:gravity="center"
            android:breakStrategy="simple"
            android:lineBreakWordStyle="phrase"
            android:hyphenationFrequency="none"
            tools:text="적절한 장소에\n나무를 심어주세요!"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ai_title" />

        <TextView
            android:id="@+id/tv_ai_mission_content"
            style="@style/InterMedium.Gray350.S10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:breakStrategy="simple"
            android:lineBreakWordStyle="phrase"
            android:hyphenationFrequency="none"
            tools:text="식물의 성장 과정을 잘 보며, 물과 햇빛을 제공해줘요."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ai_mission_title" />

        <ImageView
            android:id="@+id/iv_ai_character"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/description_ai_character"
            app:layout_constraintDimensionRatio="200:200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ai_mission_content" />

        <TextView
            android:id="@+id/tv_ai_point"
            style="@style/InterSemiBold.Primary.S14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:breakStrategy="simple"
            android:lineBreakWordStyle="phrase"
            android:hyphenationFrequency="none"
            tools:text="나무 20그루를 심으면\n100포인트를 드려요"
            app:layout_constraintBottom_toTopOf="@id/btn_ai_mission_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_ai_character"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/btn_ai_mission_start"
            style="@style/InterMedium.White.S18"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="113dp"
            android:layout_marginBottom="68dp"
            android:background="@drawable/background_primary_40"
            android:text="@string/label_mission_start"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ai_point" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>